#316 Fix cursor visibility on monitor fullscreen view

--- a/src/client/monitor/monitor.scss
+++ b/src/client/monitor/monitor.scss
@@ -12,5 +12,5 @@
 }
 
 .fullscreen {
-  cursor: none;
+  cursor: default;
 }
